shapes provide their name through the container::XNamed interface, tdf#114932

This is actually a problem introduced by 1c80246e5ff8aeb3e05384d86766a56aa878c7be
and not by 5ee141ee2fb77c3cc452ac656235d7e83e15072c as mentioned in the bug report.

Change-Id: I5f4032c13cf5eac3e515ada10b9bfa87598da438